Convert ASCII diagrams to Mermaid in Phase-08-Low-Level-Design - Converted 2 ASCII diagrams (library-management state transition, elevator-system class diagram) to Mermaid - Validated all 100 existing Mermaid diagrams - Wrapped ASCII diagrams in collapsible details blocks for reference